fix(quick-start-bar): remove part of bottom white space for mobile

--- a/src/components/General/QuickStartBar/QuickStartBar.module.css
+++ b/src/components/General/QuickStartBar/QuickStartBar.module.css
@@ -48,3 +48,9 @@
     padding: 0.5rem 0.25rem;
   }
 }
+
+@media (max-width: 464px) {
+  .quick-start-bar > div {
+    padding-bottom: 0;
+  }
+}
